--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,16 @@
 [project]
-name = "familymart-package-query"
-version = "0.03"
-description = "全家便利商店包裹查詢程式"
+name = "package-tracker"
+version = "1.7.0"
+description = "通用包裹查詢程式 - 支援全家、宅急便、7-11、郵局、蝦皮"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
     "beautifulsoup4>=4.14.3",
     "ddddocr>=1.5.6",
-    "openpyxl>=3.1.5",
     "pillow>=12.0.0",
     "playwright>=1.57.0",
     "pyinstaller>=6.17.0",
     "pyqt6>=6.10.1",
-    "pystray>=0.19.5",
-    "pywebview>=6.1",
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
 ]
